fix: safari chat rendering issue
Safari would overlap the chat bubbles on re-size

Ref: https://github.com/saadeghi/daisyui/issues/3712
Ref: https://new-hippo.atlassian.net/browse/HC-315

--- a/sandwich/static/css/project.css
+++ b/sandwich/static/css/project.css
@@ -97,6 +97,13 @@
 }
 
 @layer utility {
+  /* Fix for Safari chat bubble overlap issue with DaisyUI chat component.
+   * This has been reported and will likely be fixed by a future DaisyUI
+   * release: https://github.com/saadeghi/daisyui/issues/3712#issuecomment-3599503502 */
+  .chat {
+    @apply auto-rows-min;
+  }
+
   /* Update DaisyUI prose styling to match desired typography */
   .prose {
     line-height: 1.4;
